--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <div class="container-header">
             <!-- Logo -->
-            <img src="./img/logo.jpg" alt="logo de la página" class="logo" id="inicio">
+            <img src="./img/logo.png" alt="logo de la página" class="logo" id="inicio">
             <!-- Navigation -->
             <nav>
                 <ul class="nav-links">
@@ -46,17 +46,18 @@
                             </ul>
                         </div>
                     </div>
-                    <!-- Reserva -->
+                    <!-- Reserva Mobile -->
                     <div class="container-reserva">
                         <div class="linea-divisora"></div>
-                        <button class="btn-reserva-mobile">Reserva ya</button>
+                        <button class="btn-reserva-mobile"><a href="#contacto" class="scroll-link">Reservar
+                                Ahora</a></button>
                     </div>
                 </ul>
             </nav>
             <!-- Info Reserva -->
             <div class="contact-info">
                 <span><ion-icon name="call-outline"></ion-icon>351 73-70866</span>
-                <button class="btn-reserva">Reserva ya</button>
+                <button class="btn-reserva"><a href="#contacto" class="scroll-link">Reservar</a></button>
             </div>
             <!-- Menu hamburguesa -->
             <div class="menu-toggle">
@@ -72,8 +73,8 @@
             <div class="container-hero">
                 <div class="hero-text">
                     <h1>Complejo de Guadalupe</h1>
-                    <p>Un lugar para disfrutar y relajarse al máximo.</p>
-                    <button class="btn-reserva fadeInUp">Reserva ya</button>
+                    <p>Un lugar para disfrutar y relajarse.</p>
+                    <button class="btn-reserva fadeInUp"><a href="#contacto" class="scroll-link">Reservar</a></button>
                 </div>
             </div>
             <ion-icon name="chevron-down-outline" class="arrow-down"></ion-icon>
@@ -93,57 +94,53 @@
                 <div class="service-card hidden">
                     <img src="./icons/wifi-3d.png" alt="icono de wifi" class="img-services">
                     <h3>WiFi</h3>
-                    <p>Conexión de buena calidad en todas las cabañas.</p>
+                    <p>Disponemos de Wi-Fi de <b>alta calidad</b>.</p>
                 </div>
                 <div class="service-card hidden">
                     <img src="./icons/piscina.png" alt="icono de piscina" class="img-services">
                     <h3>Pileta</h3>
-                    <p>Disfruta de nuestra pileta con familia y amigos para pasar el calor y un dia tranquilo.</p>
+                    <p><b>Disfruta</b> de la pileta para refrescarte y compartir momentos inolvidables.</p>
                 </div>
                 <div class="service-card hidden">
                     <img src="./icons/cama.png" alt="icono de piscina" class="img-services">
                     <h3>Habitaciones</h3>
-                    <p>Dos habitaciones cada cabaña, en una habitación una cama matrimonial y en la otra habitación tres
-                        camas individuales.</p>
+                    <p>Cada cabaña cuenta con <b>dos habitaciones</b>: una con cama matrimonial y otra con tres
+                        individuales.</p>
                 </div>
                 <div class="service-card hidden">
                     <img src="./icons/aire-acondicionado.png" alt="icono de aire acondicionado" class="img-services">
                     <h3>Aire Acondicionado</h3>
-                    <p>Cabañas equipadas con aire acondicionado.</p>
+                    <p>Aire acondicionado en todas las cabañas para un <b>descanso placentero</b>.</p>
                 </div>
                 <div class="service-card hidden">
                     <img src="./icons/television-inteligente.png" alt="icono de una television smart"
                         class="img-services">
                     <h3>TV por Cable</h3>
-                    <p>TV LCD de 32" con una amplia variedad de canales por cable,
-                        ideal para relajarte y
-                        entretenerte durante tu estadía.</p>
+                    <p>LCD 32" con amplia <b>variedad</b> de canales.</p>
                 </div>
                 <div class="service-card hidden">
                     <img src="./icons/cocina.png" alt="icono de una cocina completa" class="img-services">
-                    <h3>Cocina Completa</h3>
-                    <p>Incluye cocina con horno, pava, heladera, termotanque eléctrico, equipada con todos los
-                        utensillos y
-                        productos de
-                        higiene y limpieza.</p>
+                    <h3>Cocina y Equipamiento</h3>
+                    <p>Totalmente <b>equipada</b> con horno, pava, heladera, termotanque eléctrico, utensilios de cocina
+                        y elementos de
+                        limpieza.</p>
                 </div>
                 <div class="service-card hidden">
                     <img src="./icons/servicio-de-habitaciones.png"
                         alt="icono de una persona realizando el servicio de habitacion" class="img-services">
-                    <h3>Servicio de Habitación</h3>
-                    <p>Disfruta de un servicio de habitación impecable, con limpieza para una
-                        estadía cómoda, sin ninguna preocupación.</p>
+                    <h3>Ropa de Cama</h3>
+                    <p><b>Proveemos</b> sábanas y frazadas para garantizar tu comodidad durante la estadía.</p>
                 </div>
                 <div class="service-card hidden">
                     <img src="./icons/cochera.png" alt="icono de una cochera" class="img-services">
                     <h3>Cochera</h3>
-                    <p>Estacionamiento privado y gratuito para tu comodidad.</p>
+                    <p>Garaje privado y techado.</p>
                 </div>
                 <div class="service-card hidden">
                     <img src="./icons/parrilla-de-ladrillo.png" alt="icono de una persona con un asador"
                         class="img-services">
                     <h3>Asador</h3>
-                    <p>Cada cabaña cuenta con un asador privado para que prepares tus mejores comidas.</p>
+                    <p>Un asador ideal para compartir <b>momentos especiales</b> con familia y amigos.</p>
                 </div>
             </div>
         </section>
@@ -199,8 +196,9 @@
                 <div class="lugar-turistico animate" data-animation="fade-up" data-delay="600">
                     <img src="./img/san-roque.jpg" alt="La Iglesia de Villa de Soto">
                     <div class="order__content-turistico">
-                        <h3>La Iglesia</h3>
-                        <p>Destaca su capilla, centro de la Fiesta Patronal en honor a San Roque, que convoca a miles
+                        <h3>Santuario San Roque</h3>
+                        <p>Destaca su Parroquia, centro de la Fiesta Patronal en honor a San Roque, que convoca a miles
+                            de fieles
                             cada 18 de agosto.</p>
                     </div>
                 </div>
@@ -219,7 +217,7 @@
                     <div class="order__content-turistico">
                         <h3>La Plaza</h3>
                         <p>Plaza principal rodeada de árboles y locales gastronómicos, perfecta para disfrutar de un
-                            momento tranquilo.</p>
+                            momento con amigos y familia.</p>
                     </div>
                 </div>
             </div>
